# rag-project

./: .env.example  README.md  main.py  pyproject.toml
controllers/: BaseController.py  DataController.py  ProcessController.py  ProjectController.py
docker/: docker-compose.yml
helpers/: config.py
models/: BaseDataModel.py  ChunkModel.py  ProjectModel.py
models/db_schemas/: data_chunk.py  project.py
models/enums/: DataBaseEnum.py  ResponseEnums.py
routes/: base.py  data.py
