[project]
name = "rag-project"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.110.2",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",
    "python-dotenv>=1.0.1",
    "pydantic_settings>=2.2.1",
    "aiofiles>=25.1.0",
    "regex>=2026.6.28",
    "optional.py==2.0.0",
    "langchain >= 1.3.13",
    "pymupdf >=1.28.0",
    "langchain-community>= 0.4.2",
    "langchain-text-splitters >= 1.1.2",
    "motor >= 3.7.1"

]
